# AlexeyServer

./: .gitignore  Dockerfile  README.md  docker-compose.yml
nginx/: nginx.conf
src/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/message/: CMakeLists.txt  get_high_score.cpp  get_high_score.h  parser.cpp  parser.h  response.h  score.cpp  score.h  update_high_score.cpp  update_high_score.h
src/network/: CMakeLists.txt  socket.cpp  socket.h  unix_socket_receiver.cpp  unix_socket_receiver.h
src/util/: CMakeLists.txt  logger.cpp  logger.h
